# Stocker

./: .env.example  .gitignore  docker-compose.yml  readme.md
app/: requirements.txt
app/django/: .gitignore  0002_setup_partitioning.py  Dockerfile  manage.py  requirements.txt
app/django/AlpacaIntegration/: apps.py  consumers.py  routing.py  urls.py  views.py
app/django/Stocker/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
app/django/common/: __init__.py
app/modeling/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app/modeling/saved_models/: TfStraightUpDownModel_v0.1.h5  TfStraightUpDownModel_v0.1.tflite  TfStraightUpDownModel_v0.1_metadata.pkl  TfUpDownModel_v0.1.h5  TfUpDownModel_v0.2.h5  TfUpDownModel_v0.2.tflite  TfUpDownModel_v0.2_metadata.pkl  TfUpDownModel_v0_metadata.pkl  scaler_v0.pkl  xgboost_model_v0.pkl
app/modeling/src/: app.py  main.py
app/modeling/src/data/: CandleData.py  SymbolData.py  __init__.py
app/modeling/src/db/: PostgresConnector.py  database.py
app/modeling/src/models/: AlpacaConnector.py  DataHandler.py  FiveUpDownModel.py  ModelOptimizers.py  ModelTrainers.py  SavedModelsManager.py  SqlQueries.py  StraightUpDownModel.py  database.py
app/modeling/src/scripts/: CandleLoader.py  SymbolLoader.py  TestSQLConnect.py
app/modeling/src/scripts/model_evals/: OptionPricingCalculator.py  OptionsBacktest.py  TradingSimulation.py  UpDownTfModelEval.py
app/modeling/src/scripts/model_runs/: RunModelv0-1ForDay.py  RunModelv01.py  RunStraightUpDownModelv01.py
mysql-init/: 00-create-default-user.sh
(+19 files in other folders)
